--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,19 +13,16 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
-    
 }
-
 
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
-.seo {
+
+.header h1 .seo {
     color: #d9dcd6;
 }
-
-
 
 .header div {
     padding-top: 15px;
@@ -36,14 +33,11 @@ body {
 }
 
 
+
 .header div ul li {
     display: inline-block;
-    margin-left: 15px;
-    padding-top: 5px;
-    margin-right: 10px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-    
+    margin-left: 25px;
+    list-style-type: none;
 }
 
 a {
@@ -53,7 +47,6 @@ a {
 
 p {
     font-size: 16px;
-    
 }
 
 .hero {
@@ -79,11 +72,9 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-
 }
 
-.benefits
-{
+.benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -92,63 +83,73 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-
 }
 
 .benefit-lead,
 .benefit-brand,
-.benefit-cost 
-{
+.benefit-cost {
     margin-bottom: 32px;
-    padding: 10px;
+    color: #ffffff;
 }
-
 
 
 .benefit-lead,
 .benefit-brand,
-.benefit-cost,
- h3 {
+.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-    color: white;
 }
 
 
 
-.benefits
-img {
+.benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+.benefit-brand img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
 
+.benefit-cost img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
 
 .search-engine-optimization,
 .online-reputation-management,
-.social-media-marketing
- {
+.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+
 }
 
-
- img {
-    max-height: 300px;
-    max-width: 300px;
+.search-engine-optimization img {
+    max-height: 200px;
 }
 
+.online-reputation-management img {
+    max-height: 200px;
+}
 
- h2 {
+.social-media-marketing img {
+    max-height: 200px;
+}
+
+.search-engine-optimization,
+.online-reputation-management,
+.social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 
 
 .footer {
@@ -161,4 +162,3 @@ img {
 .footer h2 {
     font-size: 20px;
 }
-
